poprawki + prace nad geolokacja edge